holds the important parts of PaintWeb - without the docs, tests and demos.  
(Suggested by Martin Langhoff, my mentor.)

- Changed the styling of the "plugin bar" of the TinyMCE plugin - the one 
displayed at the top of PaintWeb, when it runs inside TinyMCE. The background 
color is now yellow, and the two Save/Cancel actions use inputs of type=button.  
Thanks to Olli Savolainen.

- The TinyMCE plugin now sets up a reference to the current TinyMCE editor 
instance in the current PaintWeb.config instance. This allows extensions from 
inside PaintWeb to access the TinyMCE editor - using 
PaintWeb.config.tinymceEditor. This is used by the updated Moodle extension.

- Updated the Moodle extension to support image saving inside Moodle 2.0.

- Created a new imagesave20.php script which implements the image save operation 
for Moodle 2.0. This script saves images inside the user_draft file area.


2009-08-10:
===========

- Started work on Moodle 2.0 integration. Moodle 1.9 integration has been 
postponed for a number of reasons. Further details in an upcoming blog post at 
robodesign.ro/mihai.

- New script for localization integration specific to Moodle 2.0 - see 
update_tinymcelang.pnp.

- Improved/fixed gen_moodlelang.php.

- Moved the TODO file to the Google Code wiki:
http://code.google.com/p/paintweb/wiki/TODO

The wiki page includes new items and some fixes.

2009-08-03:
===========

- Worked on coding style for the PHP scripts. Now the scripts follow the Moodle 
coding guidelines more closely.
- Image save now requires users to be logged-in. Obviously.
- More usage of Moodle API inside the PHP scripts.
- Localization updates.

2009-07-30:
===========

- Completed work on the "Create image" functionality in the TinyMCE plugin.
- Worked around the security violation caused by rendering of images with data 
URLs in Webkit/Gecko 1.9.0.
- A bit of improved browser detection in the PaintWeb lib.
- Fixed image saving as JPEG in Firefox.

2009-07-29:
===========
