@@ -10,6 +10,11 @@ displayed at the top of PaintWeb, when it runs inside TinyMCE. The background
 color is now yellow, and the two Save/Cancel actions use inputs of type=button.  
 Thanks to Olli Savolainen.
 
+- The overlay button which shows "Edit" on top of images inside TinyMCE is now 
+no longer a link. It is an input of type=button. This change also fixed the 
+problem affecting Firefox users: they couldn't easily click the link, for some 
+reason. Thanks Olli Savolainen, again!
+
 - The TinyMCE plugin now sets up a reference to the current TinyMCE editor 
 instance in the current PaintWeb.config instance. This allows extensions from 
 inside PaintWeb to access the TinyMCE editor - using 
